@@ -1,6 +1,7 @@
 03/04/08 Sylvain Gaillard & Julien Dutheil
 * New function countValues in VectorTools.
 * Parametrizable now have a getNumberOfParameters method.
+* New function getRow in DataTable.
 
 18/03/08 Julien Dutheil
 * Added StatTest interface.
